updated planed nd fixed splash alignment

--- a/src/components/ContactMe/ContactMe.module.css
+++ b/src/components/ContactMe/ContactMe.module.css
@@ -59,7 +59,7 @@
     height: 50%;
     width: 50%;
     border-radius: 30%;
-    box-shadow: 0px 0px 5px 5px rgb(12, 175, 250);
+    box-shadow: 0px 0px 3px 3px rgb(12, 175, 250);
     /* box-shadow: 0px 0px 5px 5px rgb(255, 210, 9); */
 }
 
@@ -73,6 +73,14 @@
     font-size: 1.3rem;
     border-radius: 50px;
     box-shadow: 0px 0px 3px 3px rgb(0, 211, 105);
+}
+
+.form:hover {
+    box-shadow: 0px 0px 5px 5px rgb(0, 211, 105);
+}
+
+.card:hover {
+    box-shadow: 0px 0px 5px 5px rgb(12, 175, 250);
 }
 
 .form div {
@@ -105,8 +113,8 @@
 }
 
 .textInput {
-    width: 80%;
-    height: 60%;
+    width: 90%;
+    height: 70%;
     font-family: 'Play', sans-serif;
     font-size: 1.2rem;
 }
