--- a/src/index.css
+++ b/src/index.css
@@ -62,22 +62,52 @@ code {
     color: rgb(3, 233, 118);
 }
 
-#socials {
+.rightSide {
     position: absolute;
-    z-index: 1;
-    top: 73%;
-    left: 72%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    top: 79%;
+    left: 62%;
+    /* border: 2px solid white; */
+    height: 50%;
+    width: 50%;
+    min-height: 200px;
+    padding-top: 2%;
+}
+
+#socials {
+    /* position: absolute;
+    z-index: 3;
+    top: 53%;
+    left: 72%; */
     width: 100%;
+    height: 50%;
+    margin:0px;
+    padding:0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* padding-top: 7%; */
 }
 
 #socialsList {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 20%;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 40%;
+    height: 100%;
+    /* padding: 0px; */
+    margin: 0px;
+    padding: 0px 12% 0px 0px;
+    /* padding-top: 7%; */
     list-style: none;
-    position: relative;
+    /* position: absolute;
+    z-index: 3;
+    top: 100%;
+    left: 72%; */
     /* font-size: rem; */
 }
 
@@ -94,7 +124,7 @@ code {
 
 .anchorT {
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     color: white;
     position: absolute;
     font-weight: bold;
@@ -195,14 +225,28 @@ code {
 }
 
 .name {
+    position: absolute;
+    z-index: 2;
+    top: 13%;
+    /* left: 12.5%; */
     font-size: 4rem;
-    width: 50vh;
-    line-height: 220%;
+    /* width: 55vh; */
+    line-height: 180%;
     padding-top: 30px;
-    text-align: right;
+    /* text-align: right; */
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
     font-weight: bold;
     /* color: white; */
     text-shadow: 0 0 10px black;
+    /* border: 1px solid white; */
+    width: 58%;
+}
+
+.s {
+    padding-left: 10px;
 }
 
 /* .break {
@@ -210,12 +254,24 @@ code {
 } */
 
 .role {
-    /* position: absolute; */
-    font-size: 1.8rem;
-    width: 55vh;
-    padding: 15px 22px 20px 0px;
-    text-align: right;
-    overflow: visible;
+    /* position: absolute;
+    z-index: 2;
+    top: 13%;
+    left: 68.5%; */
+    font-size: 2.1rem;
+    /* width: 55vh; */
+    /* padding: 15px 64px 20px 0px; */
+    /* text-align: right; */
+    /* overflow: visible; */
+    height: 30%;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* border:1px solid red; */
+    margin: 0px;
+    padding-right: 2%;
 }
 
 .downpg1 {
@@ -297,7 +353,7 @@ code {
 .word span {
 	cursor: pointer;
 	display: inline-block;
-	font-size: 55px;
+	font-size: 65px;
 	user-select: none;
 	line-height: .8;
 }
